tests/tooling/fixtures/native/recovery/negative/negative_nil_literal_global_divide_by_zero.objc3
// Expected diagnostic code(s): O3S210.
module NegativeNilLiteralGlobalDivideByZero;

let seed = nil / 0;

fn main() -> i32 {
  return seed;
}
